# degen

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  openapi.json
.github/workflows/: ci.yml
.sqlx/: query-1cecdcdf36ed52ee019ee1a827a301db82560c3a05caac1e3536e3a2fe03e019.json  query-200d12431f0a40a56269cf035283d0583bfc0e7441225e2bd6221dd8bb209740.json  query-6cd0bb14985510198a58e4bf3edbeb4f2d1d42fe1c09a2a4245e4b601fa7dc1d.json  query-886cf1429af565227ac53fa7f2e5369e8edce6cf1d3beb805c4f2d6fc5f8c401.json  query-8c6b9d194598b39ba1879cad566575f1b390e440ffaf36933833415e7e8adf81.json
migrations/: 20250101000000_initial_schema.sql  20250101000002_initial_schema_with_wallets_and_transactions.sql  20250719145021_create_wallets.sql  20250719145049_create_transactions.sql
postman/: degen-api.postman_collection.json  degen-api.postman_environment.json
scripts/: generate_postman.py
src/: error.rs  handlers.rs  lib.rs  main.rs  models.rs
tests/: integration.rs  utils.rs
