[package]
name = "degen"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v7"] }
serde = { version = "1.0", features = ["derive"] }
utoipa = { version = "4", features = ["axum_extras"] }
dotenvy = "0.15"

[dev-dependencies]
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
