[package]
name = "degen"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.20", features = ["json"] }
tower-http = { version = "0.4.4", features = ["trace", "cors"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "macros", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "v7", "serde"] }
bs58 = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
utoipa = { version = "3.0.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.0", features = ["axum"] }
dotenv = "0.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
hyper = { version = "0.14", features = ["full"] }
thiserror = "1.0.50"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
